[package]
name = "mowl"
version = "2.0.0"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
readme = "README.md"
keywords = ["logger", "color", "log", "logging"]
repository = "https://github.com/saschagrunert/mowl"
homepage = "https://github.com/saschagrunert/mowl"
documentation = "https://docs.rs/mowl"
description = "Simple logging with coloring support"
categories = ["command-line-interface"]
license-file = "LICENSE"

[badges]
travis-ci = { repository = "saschagrunert/mowl", branch = "master" }
appveyor = { repository = "saschagrunert/mowl", branch = "master", service = "github" }

[dependencies]
failure = "0.1.2"
log = { version="0.4.3", features=["std"] }
term = "0.5.1"
time = "0.1.40"
